# Linux-Mod-Manager

./: .gitignore  DOCUMENTATION.md  README.md  install.sh
.github/workflows/: build-check.yml  release.yml
frontend/: index.html  main.js  style.css
frontend/modding/: cyberpunk2077.js  default.js  index.js  shared.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  login.json
src-tauri/src/: installed.rs  main.rs  nexusmods.rs
src-tauri/src/modding/: cyberpunk.rs  mod.rs
