[package]
name = "linux-mod-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
zip = "2"
sevenz-rust = "0.6"
url = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
